# pullwise-ai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pullwise.spec  pyproject.toml
.github/scripts/: update_homebrew_formula.sh
Formula/: pullwise.rb
pullwise/adapters/issue_tracker/: __init__.py  asana.py  azure_devops.py  bugzilla.py  clickup.py  clubhouse.py  factory.py  github_issues.py  gitlab_issues.py  jira.py  linear.py  monday.py  notion.py  redmine.py  trello.py  youtrack.py
pullwise/adapters/llm/: __init__.py  codellama_llm.py  cohere_llm.py  factory.py  fireworks_llm.py  groq_llm.py  huggingface_llm.py  llm_fallback.py  openai_llm.py  together_llm.py
pullwise/adapters/vcs/: azure_devops.py  bitbucket.py  codecommit.py  factory.py  github.py  gitlab.py  local_git.py  local_svn.py
pullwise/adapters/vector_store/: chroma.py  chroma_indexer.py  voyage.py
pullwise/cli/: edit.py  index.py  main.py  post.py  preview.py  review.py  smoke.py
pullwise/config/: paths.py  settings.py
pullwise/context/: context_builder.py  context_model.py  prompt_renderer.py
pullwise/core/: feedback_transformer.py  review_agent.py
pullwise/display/: badge_renderer.py  cli_header.py  index_summary.py  rich_preview.py
pullwise/factory/: base.py  issue_tracker_factory.py  llm_factory.py  vcs_factory.py
pullwise/ports/: issue_tracker_port.py  llm_port.py  local_vcs_port.py  memory_store_port.py  vcs_port.py  vector_index_port.py
pullwise/templates/: review_prompt.j2
pullwise/tests/adapters/: test_chroma.py  test_llm_fallback.py
pullwise/tests/cli/: test_edit.py  test_index.py  test_post.py  test_preview.py  test_review.py
pullwise/utils/: file_scanner.py  git_decorators.py  logger.py
workflows/: build-release.yml
