[tool.poetry]
name = "pullwise-ai"
version = "0.1.0"
description = "AI-powered pull request reviewer with vector-based context and human-in-the-loop CLI."
authors = ["Chris McAfee <chrismcafee@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chrismcafee/pullwise-ai"
keywords = ["cli", "ai", "github", "code-review", "llm", "vector", "rag", "chroma", "faiss"]

[tool.poetry.dependencies]
python = "^3.9"

# CLI
typer = { extras = ["all"], version = "^0.16.0" }
rich = "^13.7.0"

# VCS + GitHub
GitPython = "^3.1.44"
PyGithub = "^2.6.1"

# LLMs
openai = "^1.94.0"
langchain = "^0.3.26"
cohere = "^5.16.1"
huggingface-hub = "^0.33.2"
httpx = "^0.27.0"
fireworks-ai = "^0.17.0"
groq = "^0.4.0"
together = "^0.2.10"
transformers = "^4.42.1"

# Vector DBs & Embeddings
chromadb = "^0.5.0"
faiss-cpu = "^1.7.4"
langchain-community = "^0.2.0"

# Prompt Rendering
jinja2 = "^3.1.3"
tiktoken = "^0.9.0"

# Issue Tracker SDKs
jira = "^3.5.2"
python-gitlab = "^4.4.0"
asana = "^3.2.2"
notion-client = "^2.2.1"
clickupython = "^0.2.3"
monday = "^2.2.5"
py-trello = "^0.19.0"
youtrack-python = "^1.0.3"
python-redmine = "^2.4.0"
azure-devops = "^7.1.0b4"

# YAML / ENV
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"

# Reliability
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]

# Linting & Formatting
ruff = "^0.4.2"
black = "^24.4.2"
pre-commit = "^3.7.1"

# Testing & Coverage
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
coverage = "^7.5.3"

# Typing & Static Analysis
mypy = "^1.10.0"
types-requests = "^2.31.0.20240406"
types-PyYAML = "^6.0.12.20240311"
types-setuptools = "^69.2.0.20240316"

[tool.poetry.scripts]
pullwise = "pullwise.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
